Update generated themes to match newer template

--- a/themes/base16-materia.config
+++ b/themes/base16-materia.config
@@ -3,24 +3,47 @@
 # Author: Defman21
 
 foreground      = #CDD3DE
-foreground_bold = #CDD3DE
-cursor          = #CDD3DE
+foreground_bold = #D5DBE5
+cursor          = #D5DBE5
 background      = #263238
 
 # 16 color space
+
+# Black, Gray, Silver, White
 color0  = #263238
-color1  = #EC5F67
-color2  = #8BD649
-color3  = #FFCC00
-color4  = #89DDFF
-color5  = #82AAFF
-color6  = #80CBC4
-color7  = #CDD3DE
 color8  = #707880
-color9  = #EA9560
-color10 = #2C393F
-color11 = #37474F
-color12 = #C9CCD3
-color13 = #D5DBE5
-color14 = #EC5F67
+color7  = #CDD3DE
 color15 = #FFFFFF
+
+# Red
+color1  = #EC5F67
+color9  = #EC5F67
+
+# Green
+color2  = #8BD649
+color10 = #8BD649
+
+# Yellow
+color3  = #FFCC00
+color11 = #FFCC00
+
+# Blue
+color4  = #89DDFF
+color12 = #89DDFF
+
+# Purple
+color5  = #82AAFF
+color13 = #82AAFF
+
+# Teal
+color6  = #80CBC4
+color14 = #80CBC4
+
+# Extra colors
+color15 = #FFFFFF
+color16 = #EA9560
+color17 = #EC5F67
+color18 = #2C393F
+color19 = #37474F
+color20 = #C9CCD3
+color21 = #D5DBE5
