--- a/themes/base16-ocean.config
+++ b/themes/base16-ocean.config
@@ -3,24 +3,47 @@
 # Author: Chris Kempson (http://chriskempson.com)
 
 foreground      = #c0c5ce
-foreground_bold = #c0c5ce
-cursor          = #c0c5ce
+foreground_bold = #dfe1e8
+cursor          = #dfe1e8
 background      = #2b303b
 
 # 16 color space
+
+# Black, Gray, Silver, White
 color0  = #2b303b
-color1  = #bf616a
-color2  = #a3be8c
-color3  = #ebcb8b
-color4  = #8fa1b3
-color5  = #b48ead
-color6  = #96b5b4
-color7  = #c0c5ce
 color8  = #65737e
-color9  = #d08770
-color10 = #343d46
-color11 = #4f5b66
-color12 = #a7adba
-color13 = #dfe1e8
-color14 = #ab7967
+color7  = #c0c5ce
 color15 = #eff1f5
+
+# Red
+color1  = #bf616a
+color9  = #bf616a
+
+# Green
+color2  = #a3be8c
+color10 = #a3be8c
+
+# Yellow
+color3  = #ebcb8b
+color11 = #ebcb8b
+
+# Blue
+color4  = #8fa1b3
+color12 = #8fa1b3
+
+# Purple
+color5  = #b48ead
+color13 = #b48ead
+
+# Teal
+color6  = #96b5b4
+color14 = #96b5b4
+
+# Extra colors
+color15 = #eff1f5
+color16 = #d08770
+color17 = #ab7967
+color18 = #343d46
+color19 = #4f5b66
+color20 = #a7adba
+color21 = #dfe1e8
