--- a/themes/base16-shapeshifter.config
+++ b/themes/base16-shapeshifter.config
@@ -3,24 +3,47 @@
 # Author: Tyler Benziger (http://tybenz.com)
 
 foreground      = #102015
-foreground_bold = #102015
-cursor          = #102015
+foreground_bold = #040404
+cursor          = #040404
 background      = #f9f9f9
 
 # 16 color space
+
+# Black, Gray, Silver, White
 color0  = #f9f9f9
-color1  = #e92f2f
-color2  = #0ed839
-color3  = #dddd13
-color4  = #3b48e3
-color5  = #f996e2
-color6  = #23edda
-color7  = #102015
 color8  = #555555
-color9  = #e09448
-color10 = #e0e0e0
-color11 = #ababab
-color12 = #343434
-color13 = #040404
-color14 = #69542d
+color7  = #102015
 color15 = #000000
+
+# Red
+color1  = #e92f2f
+color9  = #e92f2f
+
+# Green
+color2  = #0ed839
+color10 = #0ed839
+
+# Yellow
+color3  = #dddd13
+color11 = #dddd13
+
+# Blue
+color4  = #3b48e3
+color12 = #3b48e3
+
+# Purple
+color5  = #f996e2
+color13 = #f996e2
+
+# Teal
+color6  = #23edda
+color14 = #23edda
+
+# Extra colors
+color15 = #000000
+color16 = #e09448
+color17 = #69542d
+color18 = #e0e0e0
+color19 = #ababab
+color20 = #343434
+color21 = #040404
