--- a/themes/base16-solarized-light.config
+++ b/themes/base16-solarized-light.config
@@ -3,24 +3,47 @@
 # Author: Ethan Schoonover (http://ethanschoonover.com/solarized)
 
 foreground      = #586e75
-foreground_bold = #586e75
-cursor          = #586e75
+foreground_bold = #073642
+cursor          = #073642
 background      = #fdf6e3
 
 # 16 color space
+
+# Black, Gray, Silver, White
 color0  = #fdf6e3
-color1  = #dc322f
-color2  = #859900
-color3  = #b58900
-color4  = #268bd2
-color5  = #6c71c4
-color6  = #2aa198
-color7  = #586e75
 color8  = #839496
-color9  = #cb4b16
-color10 = #eee8d5
-color11 = #93a1a1
-color12 = #657b83
-color13 = #073642
-color14 = #d33682
+color7  = #586e75
 color15 = #002b36
+
+# Red
+color1  = #dc322f
+color9  = #dc322f
+
+# Green
+color2  = #859900
+color10 = #859900
+
+# Yellow
+color3  = #b58900
+color11 = #b58900
+
+# Blue
+color4  = #268bd2
+color12 = #268bd2
+
+# Purple
+color5  = #6c71c4
+color13 = #6c71c4
+
+# Teal
+color6  = #2aa198
+color14 = #2aa198
+
+# Extra colors
+color15 = #002b36
+color16 = #cb4b16
+color17 = #d33682
+color18 = #eee8d5
+color19 = #93a1a1
+color20 = #657b83
+color21 = #073642
