--- a/themes/base16-tomorrow.config
+++ b/themes/base16-tomorrow.config
@@ -3,24 +3,47 @@
 # Author: Chris Kempson (http://chriskempson.com)
 
 foreground      = #4d4d4c
-foreground_bold = #4d4d4c
-cursor          = #4d4d4c
+foreground_bold = #282a2e
+cursor          = #282a2e
 background      = #ffffff
 
 # 16 color space
+
+# Black, Gray, Silver, White
 color0  = #ffffff
-color1  = #c82829
-color2  = #718c00
-color3  = #eab700
-color4  = #4271ae
-color5  = #8959a8
-color6  = #3e999f
-color7  = #4d4d4c
 color8  = #8e908c
-color9  = #f5871f
-color10 = #e0e0e0
-color11 = #d6d6d6
-color12 = #969896
-color13 = #282a2e
-color14 = #a3685a
+color7  = #4d4d4c
 color15 = #1d1f21
+
+# Red
+color1  = #c82829
+color9  = #c82829
+
+# Green
+color2  = #718c00
+color10 = #718c00
+
+# Yellow
+color3  = #eab700
+color11 = #eab700
+
+# Blue
+color4  = #4271ae
+color12 = #4271ae
+
+# Purple
+color5  = #8959a8
+color13 = #8959a8
+
+# Teal
+color6  = #3e999f
+color14 = #3e999f
+
+# Extra colors
+color15 = #1d1f21
+color16 = #f5871f
+color17 = #a3685a
+color18 = #e0e0e0
+color19 = #d6d6d6
+color20 = #969896
+color21 = #282a2e
