--- a/themes/base16-apathy.config
+++ b/themes/base16-apathy.config
@@ -3,24 +3,47 @@
 # Author: Jannik Siebert (https://github.com/janniks)
 
 foreground      = #81B5AC
-foreground_bold = #81B5AC
-cursor          = #81B5AC
+foreground_bold = #A7CEC8
+cursor          = #A7CEC8
 background      = #031A16
 
 # 16 color space
+
+# Black, Gray, Silver, White
 color0  = #031A16
-color1  = #3E9688
-color2  = #883E96
-color3  = #3E4C96
-color4  = #96883E
-color5  = #4C963E
-color6  = #963E4C
-color7  = #81B5AC
 color8  = #2B685E
-color9  = #3E7996
-color10 = #0B342D
-color11 = #184E45
-color12 = #5F9C92
-color13 = #A7CEC8
-color14 = #3E965B
+color7  = #81B5AC
 color15 = #D2E7E4
+
+# Red
+color1  = #3E9688
+color9  = #3E9688
+
+# Green
+color2  = #883E96
+color10 = #883E96
+
+# Yellow
+color3  = #3E4C96
+color11 = #3E4C96
+
+# Blue
+color4  = #96883E
+color12 = #96883E
+
+# Purple
+color5  = #4C963E
+color13 = #4C963E
+
+# Teal
+color6  = #963E4C
+color14 = #963E4C
+
+# Extra colors
+color15 = #D2E7E4
+color16 = #3E7996
+color17 = #3E965B
+color18 = #0B342D
+color19 = #184E45
+color20 = #5F9C92
+color21 = #A7CEC8
