--- a/themes/base16-ashes.config
+++ b/themes/base16-ashes.config
@@ -3,24 +3,47 @@
 # Author: Jannik Siebert (https://github.com/janniks)
 
 foreground      = #C7CCD1
-foreground_bold = #C7CCD1
-cursor          = #C7CCD1
+foreground_bold = #DFE2E5
+cursor          = #DFE2E5
 background      = #1C2023
 
 # 16 color space
+
+# Black, Gray, Silver, White
 color0  = #1C2023
-color1  = #C7AE95
-color2  = #95C7AE
-color3  = #AEC795
-color4  = #AE95C7
-color5  = #C795AE
-color6  = #95AEC7
-color7  = #C7CCD1
 color8  = #747C84
-color9  = #C7C795
-color10 = #393F45
-color11 = #565E65
-color12 = #ADB3BA
-color13 = #DFE2E5
-color14 = #C79595
+color7  = #C7CCD1
 color15 = #F3F4F5
+
+# Red
+color1  = #C7AE95
+color9  = #C7AE95
+
+# Green
+color2  = #95C7AE
+color10 = #95C7AE
+
+# Yellow
+color3  = #AEC795
+color11 = #AEC795
+
+# Blue
+color4  = #AE95C7
+color12 = #AE95C7
+
+# Purple
+color5  = #C795AE
+color13 = #C795AE
+
+# Teal
+color6  = #95AEC7
+color14 = #95AEC7
+
+# Extra colors
+color15 = #F3F4F5
+color16 = #C7C795
+color17 = #C79595
+color18 = #393F45
+color19 = #565E65
+color20 = #ADB3BA
+color21 = #DFE2E5
