--- a/themes/base16-atelier-cave.config
+++ b/themes/base16-atelier-cave.config
@@ -3,24 +3,47 @@
 # Author: Bram de Haan (http://atelierbramdehaan.nl)
 
 foreground      = #8b8792
-foreground_bold = #8b8792
-cursor          = #8b8792
+foreground_bold = #e2dfe7
+cursor          = #e2dfe7
 background      = #19171c
 
 # 16 color space
+
+# Black, Gray, Silver, White
 color0  = #19171c
-color1  = #be4678
-color2  = #2a9292
-color3  = #a06e3b
-color4  = #576ddb
-color5  = #955ae7
-color6  = #398bc6
-color7  = #8b8792
 color8  = #655f6d
-color9  = #aa573c
-color10 = #26232a
-color11 = #585260
-color12 = #7e7887
-color13 = #e2dfe7
-color14 = #bf40bf
+color7  = #8b8792
 color15 = #efecf4
+
+# Red
+color1  = #be4678
+color9  = #be4678
+
+# Green
+color2  = #2a9292
+color10 = #2a9292
+
+# Yellow
+color3  = #a06e3b
+color11 = #a06e3b
+
+# Blue
+color4  = #576ddb
+color12 = #576ddb
+
+# Purple
+color5  = #955ae7
+color13 = #955ae7
+
+# Teal
+color6  = #398bc6
+color14 = #398bc6
+
+# Extra colors
+color15 = #efecf4
+color16 = #aa573c
+color17 = #bf40bf
+color18 = #26232a
+color19 = #585260
+color20 = #7e7887
+color21 = #e2dfe7
