--- a/themes/base16-atelier-dune.config
+++ b/themes/base16-atelier-dune.config
@@ -3,24 +3,47 @@
 # Author: Bram de Haan (http://atelierbramdehaan.nl)
 
 foreground      = #a6a28c
-foreground_bold = #a6a28c
-cursor          = #a6a28c
+foreground_bold = #e8e4cf
+cursor          = #e8e4cf
 background      = #20201d
 
 # 16 color space
+
+# Black, Gray, Silver, White
 color0  = #20201d
-color1  = #d73737
-color2  = #60ac39
-color3  = #ae9513
-color4  = #6684e1
-color5  = #b854d4
-color6  = #1fad83
-color7  = #a6a28c
 color8  = #7d7a68
-color9  = #b65611
-color10 = #292824
-color11 = #6e6b5e
-color12 = #999580
-color13 = #e8e4cf
-color14 = #d43552
+color7  = #a6a28c
 color15 = #fefbec
+
+# Red
+color1  = #d73737
+color9  = #d73737
+
+# Green
+color2  = #60ac39
+color10 = #60ac39
+
+# Yellow
+color3  = #ae9513
+color11 = #ae9513
+
+# Blue
+color4  = #6684e1
+color12 = #6684e1
+
+# Purple
+color5  = #b854d4
+color13 = #b854d4
+
+# Teal
+color6  = #1fad83
+color14 = #1fad83
+
+# Extra colors
+color15 = #fefbec
+color16 = #b65611
+color17 = #d43552
+color18 = #292824
+color19 = #6e6b5e
+color20 = #999580
+color21 = #e8e4cf
