--- a/themes/base16-atelier-heath.config
+++ b/themes/base16-atelier-heath.config
@@ -3,24 +3,47 @@
 # Author: Bram de Haan (http://atelierbramdehaan.nl)
 
 foreground      = #ab9bab
-foreground_bold = #ab9bab
-cursor          = #ab9bab
+foreground_bold = #d8cad8
+cursor          = #d8cad8
 background      = #1b181b
 
 # 16 color space
+
+# Black, Gray, Silver, White
 color0  = #1b181b
-color1  = #ca402b
-color2  = #918b3b
-color3  = #bb8a35
-color4  = #516aec
-color5  = #7b59c0
-color6  = #159393
-color7  = #ab9bab
 color8  = #776977
-color9  = #a65926
-color10 = #292329
-color11 = #695d69
-color12 = #9e8f9e
-color13 = #d8cad8
-color14 = #cc33cc
+color7  = #ab9bab
 color15 = #f7f3f7
+
+# Red
+color1  = #ca402b
+color9  = #ca402b
+
+# Green
+color2  = #918b3b
+color10 = #918b3b
+
+# Yellow
+color3  = #bb8a35
+color11 = #bb8a35
+
+# Blue
+color4  = #516aec
+color12 = #516aec
+
+# Purple
+color5  = #7b59c0
+color13 = #7b59c0
+
+# Teal
+color6  = #159393
+color14 = #159393
+
+# Extra colors
+color15 = #f7f3f7
+color16 = #a65926
+color17 = #cc33cc
+color18 = #292329
+color19 = #695d69
+color20 = #9e8f9e
+color21 = #d8cad8
