--- a/themes/base16-atelier-lakeside.config
+++ b/themes/base16-atelier-lakeside.config
@@ -3,24 +3,47 @@
 # Author: Bram de Haan (http://atelierbramdehaan.nl)
 
 foreground      = #7ea2b4
-foreground_bold = #7ea2b4
-cursor          = #7ea2b4
+foreground_bold = #c1e4f6
+cursor          = #c1e4f6
 background      = #161b1d
 
 # 16 color space
+
+# Black, Gray, Silver, White
 color0  = #161b1d
-color1  = #d22d72
-color2  = #568c3b
-color3  = #8a8a0f
-color4  = #257fad
-color5  = #6b6bb8
-color6  = #2d8f6f
-color7  = #7ea2b4
 color8  = #5a7b8c
-color9  = #935c25
-color10 = #1f292e
-color11 = #516d7b
-color12 = #7195a8
-color13 = #c1e4f6
-color14 = #b72dd2
+color7  = #7ea2b4
 color15 = #ebf8ff
+
+# Red
+color1  = #d22d72
+color9  = #d22d72
+
+# Green
+color2  = #568c3b
+color10 = #568c3b
+
+# Yellow
+color3  = #8a8a0f
+color11 = #8a8a0f
+
+# Blue
+color4  = #257fad
+color12 = #257fad
+
+# Purple
+color5  = #6b6bb8
+color13 = #6b6bb8
+
+# Teal
+color6  = #2d8f6f
+color14 = #2d8f6f
+
+# Extra colors
+color15 = #ebf8ff
+color16 = #935c25
+color17 = #b72dd2
+color18 = #1f292e
+color19 = #516d7b
+color20 = #7195a8
+color21 = #c1e4f6
