--- a/themes/base16-atelier-plateau.config
+++ b/themes/base16-atelier-plateau.config
@@ -3,24 +3,47 @@
 # Author: Bram de Haan (http://atelierbramdehaan.nl)
 
 foreground      = #8a8585
-foreground_bold = #8a8585
-cursor          = #8a8585
+foreground_bold = #e7dfdf
+cursor          = #e7dfdf
 background      = #1b1818
 
 # 16 color space
+
+# Black, Gray, Silver, White
 color0  = #1b1818
-color1  = #ca4949
-color2  = #4b8b8b
-color3  = #a06e3b
-color4  = #7272ca
-color5  = #8464c4
-color6  = #5485b6
-color7  = #8a8585
 color8  = #655d5d
-color9  = #b45a3c
-color10 = #292424
-color11 = #585050
-color12 = #7e7777
-color13 = #e7dfdf
-color14 = #bd5187
+color7  = #8a8585
 color15 = #f4ecec
+
+# Red
+color1  = #ca4949
+color9  = #ca4949
+
+# Green
+color2  = #4b8b8b
+color10 = #4b8b8b
+
+# Yellow
+color3  = #a06e3b
+color11 = #a06e3b
+
+# Blue
+color4  = #7272ca
+color12 = #7272ca
+
+# Purple
+color5  = #8464c4
+color13 = #8464c4
+
+# Teal
+color6  = #5485b6
+color14 = #5485b6
+
+# Extra colors
+color15 = #f4ecec
+color16 = #b45a3c
+color17 = #bd5187
+color18 = #292424
+color19 = #585050
+color20 = #7e7777
+color21 = #e7dfdf
