--- a/themes/base16-atelier-seaside.config
+++ b/themes/base16-atelier-seaside.config
@@ -3,24 +3,47 @@
 # Author: Bram de Haan (http://atelierbramdehaan.nl)
 
 foreground      = #8ca68c
-foreground_bold = #8ca68c
-cursor          = #8ca68c
+foreground_bold = #cfe8cf
+cursor          = #cfe8cf
 background      = #131513
 
 # 16 color space
+
+# Black, Gray, Silver, White
 color0  = #131513
-color1  = #e6193c
-color2  = #29a329
-color3  = #98981b
-color4  = #3d62f5
-color5  = #ad2bee
-color6  = #1999b3
-color7  = #8ca68c
 color8  = #687d68
-color9  = #87711d
-color10 = #242924
-color11 = #5e6e5e
-color12 = #809980
-color13 = #cfe8cf
-color14 = #e619c3
+color7  = #8ca68c
 color15 = #f4fbf4
+
+# Red
+color1  = #e6193c
+color9  = #e6193c
+
+# Green
+color2  = #29a329
+color10 = #29a329
+
+# Yellow
+color3  = #98981b
+color11 = #98981b
+
+# Blue
+color4  = #3d62f5
+color12 = #3d62f5
+
+# Purple
+color5  = #ad2bee
+color13 = #ad2bee
+
+# Teal
+color6  = #1999b3
+color14 = #1999b3
+
+# Extra colors
+color15 = #f4fbf4
+color16 = #87711d
+color17 = #e619c3
+color18 = #242924
+color19 = #5e6e5e
+color20 = #809980
+color21 = #cfe8cf
