--- a/themes/base16-bespin.config
+++ b/themes/base16-bespin.config
@@ -3,24 +3,47 @@
 # Author: Jan T. Sott
 
 foreground      = #8a8986
-foreground_bold = #8a8986
-cursor          = #8a8986
+foreground_bold = #9d9b97
+cursor          = #9d9b97
 background      = #28211c
 
 # 16 color space
+
+# Black, Gray, Silver, White
 color0  = #28211c
-color1  = #cf6a4c
-color2  = #54be0d
-color3  = #f9ee98
-color4  = #5ea6ea
-color5  = #9b859d
-color6  = #afc4db
-color7  = #8a8986
 color8  = #666666
-color9  = #cf7d34
-color10 = #36312e
-color11 = #5e5d5c
-color12 = #797977
-color13 = #9d9b97
-color14 = #937121
+color7  = #8a8986
 color15 = #baae9e
+
+# Red
+color1  = #cf6a4c
+color9  = #cf6a4c
+
+# Green
+color2  = #54be0d
+color10 = #54be0d
+
+# Yellow
+color3  = #f9ee98
+color11 = #f9ee98
+
+# Blue
+color4  = #5ea6ea
+color12 = #5ea6ea
+
+# Purple
+color5  = #9b859d
+color13 = #9b859d
+
+# Teal
+color6  = #afc4db
+color14 = #afc4db
+
+# Extra colors
+color15 = #baae9e
+color16 = #cf7d34
+color17 = #937121
+color18 = #36312e
+color19 = #5e5d5c
+color20 = #797977
+color21 = #9d9b97
