--- a/themes/base16-brewer.config
+++ b/themes/base16-brewer.config
@@ -3,24 +3,47 @@
 # Author: Timothée Poisot (http://github.com/tpoisot)
 
 foreground      = #b7b8b9
-foreground_bold = #b7b8b9
-cursor          = #b7b8b9
+foreground_bold = #dadbdc
+cursor          = #dadbdc
 background      = #0c0d0e
 
 # 16 color space
+
+# Black, Gray, Silver, White
 color0  = #0c0d0e
-color1  = #e31a1c
-color2  = #31a354
-color3  = #dca060
-color4  = #3182bd
-color5  = #756bb1
-color6  = #80b1d3
-color7  = #b7b8b9
 color8  = #737475
-color9  = #e6550d
-color10 = #2e2f30
-color11 = #515253
-color12 = #959697
-color13 = #dadbdc
-color14 = #b15928
+color7  = #b7b8b9
 color15 = #fcfdfe
+
+# Red
+color1  = #e31a1c
+color9  = #e31a1c
+
+# Green
+color2  = #31a354
+color10 = #31a354
+
+# Yellow
+color3  = #dca060
+color11 = #dca060
+
+# Blue
+color4  = #3182bd
+color12 = #3182bd
+
+# Purple
+color5  = #756bb1
+color13 = #756bb1
+
+# Teal
+color6  = #80b1d3
+color14 = #80b1d3
+
+# Extra colors
+color15 = #fcfdfe
+color16 = #e6550d
+color17 = #b15928
+color18 = #2e2f30
+color19 = #515253
+color20 = #959697
+color21 = #dadbdc
