--- a/themes/base16-bright.config
+++ b/themes/base16-bright.config
@@ -3,24 +3,47 @@
 # Author: Chris Kempson (http://chriskempson.com)
 
 foreground      = #e0e0e0
-foreground_bold = #e0e0e0
-cursor          = #e0e0e0
+foreground_bold = #f5f5f5
+cursor          = #f5f5f5
 background      = #000000
 
 # 16 color space
+
+# Black, Gray, Silver, White
 color0  = #000000
-color1  = #fb0120
-color2  = #a1c659
-color3  = #fda331
-color4  = #6fb3d2
-color5  = #d381c3
-color6  = #76c7b7
-color7  = #e0e0e0
 color8  = #b0b0b0
-color9  = #fc6d24
-color10 = #303030
-color11 = #505050
-color12 = #d0d0d0
-color13 = #f5f5f5
-color14 = #be643c
+color7  = #e0e0e0
 color15 = #ffffff
+
+# Red
+color1  = #fb0120
+color9  = #fb0120
+
+# Green
+color2  = #a1c659
+color10 = #a1c659
+
+# Yellow
+color3  = #fda331
+color11 = #fda331
+
+# Blue
+color4  = #6fb3d2
+color12 = #6fb3d2
+
+# Purple
+color5  = #d381c3
+color13 = #d381c3
+
+# Teal
+color6  = #76c7b7
+color14 = #76c7b7
+
+# Extra colors
+color15 = #ffffff
+color16 = #fc6d24
+color17 = #be643c
+color18 = #303030
+color19 = #505050
+color20 = #d0d0d0
+color21 = #f5f5f5
