--- a/themes/base16-chalk.config
+++ b/themes/base16-chalk.config
@@ -3,24 +3,47 @@
 # Author: Chris Kempson (http://chriskempson.com)
 
 foreground      = #d0d0d0
-foreground_bold = #d0d0d0
-cursor          = #d0d0d0
+foreground_bold = #e0e0e0
+cursor          = #e0e0e0
 background      = #151515
 
 # 16 color space
+
+# Black, Gray, Silver, White
 color0  = #151515
-color1  = #fb9fb1
-color2  = #acc267
-color3  = #ddb26f
-color4  = #6fc2ef
-color5  = #e1a3ee
-color6  = #12cfc0
-color7  = #d0d0d0
 color8  = #505050
-color9  = #eda987
-color10 = #202020
-color11 = #303030
-color12 = #b0b0b0
-color13 = #e0e0e0
-color14 = #deaf8f
+color7  = #d0d0d0
 color15 = #f5f5f5
+
+# Red
+color1  = #fb9fb1
+color9  = #fb9fb1
+
+# Green
+color2  = #acc267
+color10 = #acc267
+
+# Yellow
+color3  = #ddb26f
+color11 = #ddb26f
+
+# Blue
+color4  = #6fc2ef
+color12 = #6fc2ef
+
+# Purple
+color5  = #e1a3ee
+color13 = #e1a3ee
+
+# Teal
+color6  = #12cfc0
+color14 = #12cfc0
+
+# Extra colors
+color15 = #f5f5f5
+color16 = #eda987
+color17 = #deaf8f
+color18 = #202020
+color19 = #303030
+color20 = #b0b0b0
+color21 = #e0e0e0
