--- a/themes/base16-codeschool.config
+++ b/themes/base16-codeschool.config
@@ -3,24 +3,47 @@
 # Author: brettof86
 
 foreground      = #9ea7a6
-foreground_bold = #9ea7a6
-cursor          = #9ea7a6
+foreground_bold = #a7cfa3
+cursor          = #a7cfa3
 background      = #232c31
 
 # 16 color space
+
+# Black, Gray, Silver, White
 color0  = #232c31
-color1  = #2a5491
-color2  = #237986
-color3  = #a03b1e
-color4  = #484d79
-color5  = #c59820
-color6  = #b02f30
-color7  = #9ea7a6
 color8  = #3f4944
-color9  = #43820d
-color10 = #1c3657
-color11 = #2a343a
-color12 = #84898c
-color13 = #a7cfa3
-color14 = #c98344
+color7  = #9ea7a6
 color15 = #b5d8f6
+
+# Red
+color1  = #2a5491
+color9  = #2a5491
+
+# Green
+color2  = #237986
+color10 = #237986
+
+# Yellow
+color3  = #a03b1e
+color11 = #a03b1e
+
+# Blue
+color4  = #484d79
+color12 = #484d79
+
+# Purple
+color5  = #c59820
+color13 = #c59820
+
+# Teal
+color6  = #b02f30
+color14 = #b02f30
+
+# Extra colors
+color15 = #b5d8f6
+color16 = #43820d
+color17 = #c98344
+color18 = #1c3657
+color19 = #2a343a
+color20 = #84898c
+color21 = #a7cfa3
