--- a/themes/base16-darktooth.config
+++ b/themes/base16-darktooth.config
@@ -3,24 +3,47 @@
 # Author: Jason Milkins (https://github.com/jasonm23)
 
 foreground      = #A89984
-foreground_bold = #A89984
-cursor          = #A89984
+foreground_bold = #D5C4A1
+cursor          = #D5C4A1
 background      = #1D2021
 
 # 16 color space
+
+# Black, Gray, Silver, White
 color0  = #1D2021
-color1  = #FB543F
-color2  = #95C085
-color3  = #FAC03B
-color4  = #0D6678
-color5  = #8F4673
-color6  = #8BA59B
-color7  = #A89984
 color8  = #665C54
-color9  = #FE8625
-color10 = #32302F
-color11 = #504945
-color12 = #928374
-color13 = #D5C4A1
-color14 = #A87322
+color7  = #A89984
 color15 = #FDF4C1
+
+# Red
+color1  = #FB543F
+color9  = #FB543F
+
+# Green
+color2  = #95C085
+color10 = #95C085
+
+# Yellow
+color3  = #FAC03B
+color11 = #FAC03B
+
+# Blue
+color4  = #0D6678
+color12 = #0D6678
+
+# Purple
+color5  = #8F4673
+color13 = #8F4673
+
+# Teal
+color6  = #8BA59B
+color14 = #8BA59B
+
+# Extra colors
+color15 = #FDF4C1
+color16 = #FE8625
+color17 = #A87322
+color18 = #32302F
+color19 = #504945
+color20 = #928374
+color21 = #D5C4A1
