--- a/themes/base16-eighties.config
+++ b/themes/base16-eighties.config
@@ -3,24 +3,47 @@
 # Author: Chris Kempson (http://chriskempson.com)
 
 foreground      = #d3d0c8
-foreground_bold = #d3d0c8
-cursor          = #d3d0c8
+foreground_bold = #e8e6df
+cursor          = #e8e6df
 background      = #2d2d2d
 
 # 16 color space
+
+# Black, Gray, Silver, White
 color0  = #2d2d2d
-color1  = #f2777a
-color2  = #99cc99
-color3  = #ffcc66
-color4  = #6699cc
-color5  = #cc99cc
-color6  = #66cccc
-color7  = #d3d0c8
 color8  = #747369
-color9  = #f99157
-color10 = #393939
-color11 = #515151
-color12 = #a09f93
-color13 = #e8e6df
-color14 = #d27b53
+color7  = #d3d0c8
 color15 = #f2f0ec
+
+# Red
+color1  = #f2777a
+color9  = #f2777a
+
+# Green
+color2  = #99cc99
+color10 = #99cc99
+
+# Yellow
+color3  = #ffcc66
+color11 = #ffcc66
+
+# Blue
+color4  = #6699cc
+color12 = #6699cc
+
+# Purple
+color5  = #cc99cc
+color13 = #cc99cc
+
+# Teal
+color6  = #66cccc
+color14 = #66cccc
+
+# Extra colors
+color15 = #f2f0ec
+color16 = #f99157
+color17 = #d27b53
+color18 = #393939
+color19 = #515151
+color20 = #a09f93
+color21 = #e8e6df
