--- a/themes/base16-embers.config
+++ b/themes/base16-embers.config
@@ -3,24 +3,47 @@
 # Author: Jannik Siebert (https://github.com/janniks)
 
 foreground      = #A39A90
-foreground_bold = #A39A90
-cursor          = #A39A90
+foreground_bold = #BEB6AE
+cursor          = #BEB6AE
 background      = #16130F
 
 # 16 color space
+
+# Black, Gray, Silver, White
 color0  = #16130F
-color1  = #826D57
-color2  = #57826D
-color3  = #6D8257
-color4  = #6D5782
-color5  = #82576D
-color6  = #576D82
-color7  = #A39A90
 color8  = #5A5047
-color9  = #828257
-color10 = #2C2620
-color11 = #433B32
-color12 = #8A8075
-color13 = #BEB6AE
-color14 = #825757
+color7  = #A39A90
 color15 = #DBD6D1
+
+# Red
+color1  = #826D57
+color9  = #826D57
+
+# Green
+color2  = #57826D
+color10 = #57826D
+
+# Yellow
+color3  = #6D8257
+color11 = #6D8257
+
+# Blue
+color4  = #6D5782
+color12 = #6D5782
+
+# Purple
+color5  = #82576D
+color13 = #82576D
+
+# Teal
+color6  = #576D82
+color14 = #576D82
+
+# Extra colors
+color15 = #DBD6D1
+color16 = #828257
+color17 = #825757
+color18 = #2C2620
+color19 = #433B32
+color20 = #8A8075
+color21 = #BEB6AE
