--- a/themes/base16-flat.config
+++ b/themes/base16-flat.config
@@ -3,24 +3,47 @@
 # Author: Chris Kempson (http://chriskempson.com)
 
 foreground      = #e0e0e0
-foreground_bold = #e0e0e0
-cursor          = #e0e0e0
+foreground_bold = #f5f5f5
+cursor          = #f5f5f5
 background      = #2C3E50
 
 # 16 color space
+
+# Black, Gray, Silver, White
 color0  = #2C3E50
-color1  = #E74C3C
-color2  = #2ECC71
-color3  = #F1C40F
-color4  = #3498DB
-color5  = #9B59B6
-color6  = #1ABC9C
-color7  = #e0e0e0
 color8  = #95A5A6
-color9  = #E67E22
-color10 = #34495E
-color11 = #7F8C8D
-color12 = #BDC3C7
-color13 = #f5f5f5
-color14 = #be643c
+color7  = #e0e0e0
 color15 = #ECF0F1
+
+# Red
+color1  = #E74C3C
+color9  = #E74C3C
+
+# Green
+color2  = #2ECC71
+color10 = #2ECC71
+
+# Yellow
+color3  = #F1C40F
+color11 = #F1C40F
+
+# Blue
+color4  = #3498DB
+color12 = #3498DB
+
+# Purple
+color5  = #9B59B6
+color13 = #9B59B6
+
+# Teal
+color6  = #1ABC9C
+color14 = #1ABC9C
+
+# Extra colors
+color15 = #ECF0F1
+color16 = #E67E22
+color17 = #be643c
+color18 = #34495E
+color19 = #7F8C8D
+color20 = #BDC3C7
+color21 = #f5f5f5
