--- a/themes/base16-github.config
+++ b/themes/base16-github.config
@@ -3,24 +3,47 @@
 # Author: Defman21
 
 foreground      = #333333
-foreground_bold = #333333
-cursor          = #333333
+foreground_bold = #ffffff
+cursor          = #ffffff
 background      = #ffffff
 
 # 16 color space
+
+# Black, Gray, Silver, White
 color0  = #ffffff
-color1  = #ed6a43
-color2  = #183691
-color3  = #795da3
-color4  = #795da3
-color5  = #a71d5d
-color6  = #183691
-color7  = #333333
 color8  = #969896
-color9  = #0086b3
-color10 = #f5f5f5
-color11 = #c8c8fa
-color12 = #e8e8e8
-color13 = #ffffff
-color14 = #333333
+color7  = #333333
 color15 = #ffffff
+
+# Red
+color1  = #ed6a43
+color9  = #ed6a43
+
+# Green
+color2  = #183691
+color10 = #183691
+
+# Yellow
+color3  = #795da3
+color11 = #795da3
+
+# Blue
+color4  = #795da3
+color12 = #795da3
+
+# Purple
+color5  = #a71d5d
+color13 = #a71d5d
+
+# Teal
+color6  = #183691
+color14 = #183691
+
+# Extra colors
+color15 = #ffffff
+color16 = #0086b3
+color17 = #333333
+color18 = #f5f5f5
+color19 = #c8c8fa
+color20 = #e8e8e8
+color21 = #ffffff
