--- a/themes/base16-google-dark.config
+++ b/themes/base16-google-dark.config
@@ -3,24 +3,47 @@
 # Author: Seth Wright (http://sethawright.com)
 
 foreground      = #c5c8c6
-foreground_bold = #c5c8c6
-cursor          = #c5c8c6
+foreground_bold = #e0e0e0
+cursor          = #e0e0e0
 background      = #1d1f21
 
 # 16 color space
+
+# Black, Gray, Silver, White
 color0  = #1d1f21
-color1  = #CC342B
-color2  = #198844
-color3  = #FBA922
-color4  = #3971ED
-color5  = #A36AC7
-color6  = #3971ED
-color7  = #c5c8c6
 color8  = #969896
-color9  = #F96A38
-color10 = #282a2e
-color11 = #373b41
-color12 = #b4b7b4
-color13 = #e0e0e0
-color14 = #3971ED
+color7  = #c5c8c6
 color15 = #ffffff
+
+# Red
+color1  = #CC342B
+color9  = #CC342B
+
+# Green
+color2  = #198844
+color10 = #198844
+
+# Yellow
+color3  = #FBA922
+color11 = #FBA922
+
+# Blue
+color4  = #3971ED
+color12 = #3971ED
+
+# Purple
+color5  = #A36AC7
+color13 = #A36AC7
+
+# Teal
+color6  = #3971ED
+color14 = #3971ED
+
+# Extra colors
+color15 = #ffffff
+color16 = #F96A38
+color17 = #3971ED
+color18 = #282a2e
+color19 = #373b41
+color20 = #b4b7b4
+color21 = #e0e0e0
