--- a/themes/base16-google-light.config
+++ b/themes/base16-google-light.config
@@ -3,24 +3,47 @@
 # Author: Seth Wright (http://sethawright.com)
 
 foreground      = #373b41
-foreground_bold = #373b41
-cursor          = #373b41
+foreground_bold = #282a2e
+cursor          = #282a2e
 background      = #ffffff
 
 # 16 color space
+
+# Black, Gray, Silver, White
 color0  = #ffffff
-color1  = #CC342B
-color2  = #198844
-color3  = #FBA922
-color4  = #3971ED
-color5  = #A36AC7
-color6  = #3971ED
-color7  = #373b41
 color8  = #b4b7b4
-color9  = #F96A38
-color10 = #e0e0e0
-color11 = #c5c8c6
-color12 = #969896
-color13 = #282a2e
-color14 = #3971ED
+color7  = #373b41
 color15 = #1d1f21
+
+# Red
+color1  = #CC342B
+color9  = #CC342B
+
+# Green
+color2  = #198844
+color10 = #198844
+
+# Yellow
+color3  = #FBA922
+color11 = #FBA922
+
+# Blue
+color4  = #3971ED
+color12 = #3971ED
+
+# Purple
+color5  = #A36AC7
+color13 = #A36AC7
+
+# Teal
+color6  = #3971ED
+color14 = #3971ED
+
+# Extra colors
+color15 = #1d1f21
+color16 = #F96A38
+color17 = #3971ED
+color18 = #e0e0e0
+color19 = #c5c8c6
+color20 = #969896
+color21 = #282a2e
