--- a/themes/base16-grayscale-light.config
+++ b/themes/base16-grayscale-light.config
@@ -3,24 +3,47 @@
 # Author: Alexandre Gavioli (https://github.com/Alexx2/)
 
 foreground      = #464646
-foreground_bold = #464646
-cursor          = #464646
+foreground_bold = #252525
+cursor          = #252525
 background      = #f7f7f7
 
 # 16 color space
+
+# Black, Gray, Silver, White
 color0  = #f7f7f7
-color1  = #7c7c7c
-color2  = #8e8e8e
-color3  = #a0a0a0
-color4  = #686868
-color5  = #747474
-color6  = #868686
-color7  = #464646
 color8  = #ababab
-color9  = #999999
-color10 = #e3e3e3
-color11 = #b9b9b9
-color12 = #525252
-color13 = #252525
-color14 = #5e5e5e
+color7  = #464646
 color15 = #101010
+
+# Red
+color1  = #7c7c7c
+color9  = #7c7c7c
+
+# Green
+color2  = #8e8e8e
+color10 = #8e8e8e
+
+# Yellow
+color3  = #a0a0a0
+color11 = #a0a0a0
+
+# Blue
+color4  = #686868
+color12 = #686868
+
+# Purple
+color5  = #747474
+color13 = #747474
+
+# Teal
+color6  = #868686
+color14 = #868686
+
+# Extra colors
+color15 = #101010
+color16 = #999999
+color17 = #5e5e5e
+color18 = #e3e3e3
+color19 = #b9b9b9
+color20 = #525252
+color21 = #252525
