--- a/themes/base16-green-screen.config
+++ b/themes/base16-green-screen.config
@@ -3,24 +3,47 @@
 # Author: Chris Kempson (http://chriskempson.com)
 
 foreground      = #00bb00
-foreground_bold = #00bb00
-cursor          = #00bb00
+foreground_bold = #00dd00
+cursor          = #00dd00
 background      = #001100
 
 # 16 color space
+
+# Black, Gray, Silver, White
 color0  = #001100
-color1  = #007700
-color2  = #00bb00
-color3  = #007700
-color4  = #009900
-color5  = #00bb00
-color6  = #005500
-color7  = #00bb00
 color8  = #007700
-color9  = #009900
-color10 = #003300
-color11 = #005500
-color12 = #009900
-color13 = #00dd00
-color14 = #005500
+color7  = #00bb00
 color15 = #00ff00
+
+# Red
+color1  = #007700
+color9  = #007700
+
+# Green
+color2  = #00bb00
+color10 = #00bb00
+
+# Yellow
+color3  = #007700
+color11 = #007700
+
+# Blue
+color4  = #009900
+color12 = #009900
+
+# Purple
+color5  = #00bb00
+color13 = #00bb00
+
+# Teal
+color6  = #005500
+color14 = #005500
+
+# Extra colors
+color15 = #00ff00
+color16 = #009900
+color17 = #005500
+color18 = #003300
+color19 = #005500
+color20 = #009900
+color21 = #00dd00
