--- a/themes/base16-harmonic16-light.config
+++ b/themes/base16-harmonic16-light.config
@@ -3,24 +3,47 @@
 # Author: Jannik Siebert (https://github.com/janniks)
 
 foreground      = #405c79
-foreground_bold = #405c79
-cursor          = #405c79
+foreground_bold = #223b54
+cursor          = #223b54
 background      = #f7f9fb
 
 # 16 color space
+
+# Black, Gray, Silver, White
 color0  = #f7f9fb
-color1  = #bf8b56
-color2  = #56bf8b
-color3  = #8bbf56
-color4  = #8b56bf
-color5  = #bf568b
-color6  = #568bbf
-color7  = #405c79
 color8  = #aabcce
-color9  = #bfbf56
-color10 = #e5ebf1
-color11 = #cbd6e2
-color12 = #627e99
-color13 = #223b54
-color14 = #bf5656
+color7  = #405c79
 color15 = #0b1c2c
+
+# Red
+color1  = #bf8b56
+color9  = #bf8b56
+
+# Green
+color2  = #56bf8b
+color10 = #56bf8b
+
+# Yellow
+color3  = #8bbf56
+color11 = #8bbf56
+
+# Blue
+color4  = #8b56bf
+color12 = #8b56bf
+
+# Purple
+color5  = #bf568b
+color13 = #bf568b
+
+# Teal
+color6  = #568bbf
+color14 = #568bbf
+
+# Extra colors
+color15 = #0b1c2c
+color16 = #bfbf56
+color17 = #bf5656
+color18 = #e5ebf1
+color19 = #cbd6e2
+color20 = #627e99
+color21 = #223b54
