--- a/themes/base16-hopscotch.config
+++ b/themes/base16-hopscotch.config
@@ -3,24 +3,47 @@
 # Author: Jan T. Sott
 
 foreground      = #b9b5b8
-foreground_bold = #b9b5b8
-cursor          = #b9b5b8
+foreground_bold = #d5d3d5
+cursor          = #d5d3d5
 background      = #322931
 
 # 16 color space
+
+# Black, Gray, Silver, White
 color0  = #322931
-color1  = #dd464c
-color2  = #8fc13e
-color3  = #fdcc59
-color4  = #1290bf
-color5  = #c85e7c
-color6  = #149b93
-color7  = #b9b5b8
 color8  = #797379
-color9  = #fd8b19
-color10 = #433b42
-color11 = #5c545b
-color12 = #989498
-color13 = #d5d3d5
-color14 = #b33508
+color7  = #b9b5b8
 color15 = #ffffff
+
+# Red
+color1  = #dd464c
+color9  = #dd464c
+
+# Green
+color2  = #8fc13e
+color10 = #8fc13e
+
+# Yellow
+color3  = #fdcc59
+color11 = #fdcc59
+
+# Blue
+color4  = #1290bf
+color12 = #1290bf
+
+# Purple
+color5  = #c85e7c
+color13 = #c85e7c
+
+# Teal
+color6  = #149b93
+color14 = #149b93
+
+# Extra colors
+color15 = #ffffff
+color16 = #fd8b19
+color17 = #b33508
+color18 = #433b42
+color19 = #5c545b
+color20 = #989498
+color21 = #d5d3d5
