--- a/themes/base16-ir-black.config
+++ b/themes/base16-ir-black.config
@@ -3,24 +3,47 @@
 # Author: Timothée Poisot (http://timotheepoisot.fr)
 
 foreground      = #b5b3aa
-foreground_bold = #b5b3aa
-cursor          = #b5b3aa
+foreground_bold = #d9d7cc
+cursor          = #d9d7cc
 background      = #000000
 
 # 16 color space
+
+# Black, Gray, Silver, White
 color0  = #000000
-color1  = #ff6c60
-color2  = #a8ff60
-color3  = #ffffb6
-color4  = #96cbfe
-color5  = #ff73fd
-color6  = #c6c5fe
-color7  = #b5b3aa
 color8  = #6c6c66
-color9  = #e9c062
-color10 = #242422
-color11 = #484844
-color12 = #918f88
-color13 = #d9d7cc
-color14 = #b18a3d
+color7  = #b5b3aa
 color15 = #fdfbee
+
+# Red
+color1  = #ff6c60
+color9  = #ff6c60
+
+# Green
+color2  = #a8ff60
+color10 = #a8ff60
+
+# Yellow
+color3  = #ffffb6
+color11 = #ffffb6
+
+# Blue
+color4  = #96cbfe
+color12 = #96cbfe
+
+# Purple
+color5  = #ff73fd
+color13 = #ff73fd
+
+# Teal
+color6  = #c6c5fe
+color14 = #c6c5fe
+
+# Extra colors
+color15 = #fdfbee
+color16 = #e9c062
+color17 = #b18a3d
+color18 = #242422
+color19 = #484844
+color20 = #918f88
+color21 = #d9d7cc
