--- a/themes/base16-isotope.config
+++ b/themes/base16-isotope.config
@@ -3,24 +3,47 @@
 # Author: Jan T. Sott
 
 foreground      = #d0d0d0
-foreground_bold = #d0d0d0
-cursor          = #d0d0d0
+foreground_bold = #e0e0e0
+cursor          = #e0e0e0
 background      = #000000
 
 # 16 color space
+
+# Black, Gray, Silver, White
 color0  = #000000
-color1  = #ff0000
-color2  = #33ff00
-color3  = #ff0099
-color4  = #0066ff
-color5  = #cc00ff
-color6  = #00ffff
-color7  = #d0d0d0
 color8  = #808080
-color9  = #ff9900
-color10 = #404040
-color11 = #606060
-color12 = #c0c0c0
-color13 = #e0e0e0
-color14 = #3300ff
+color7  = #d0d0d0
 color15 = #ffffff
+
+# Red
+color1  = #ff0000
+color9  = #ff0000
+
+# Green
+color2  = #33ff00
+color10 = #33ff00
+
+# Yellow
+color3  = #ff0099
+color11 = #ff0099
+
+# Blue
+color4  = #0066ff
+color12 = #0066ff
+
+# Purple
+color5  = #cc00ff
+color13 = #cc00ff
+
+# Teal
+color6  = #00ffff
+color14 = #00ffff
+
+# Extra colors
+color15 = #ffffff
+color16 = #ff9900
+color17 = #3300ff
+color18 = #404040
+color19 = #606060
+color20 = #c0c0c0
+color21 = #e0e0e0
