--- a/themes/base16-london-tube.config
+++ b/themes/base16-london-tube.config
@@ -3,24 +3,47 @@
 # Author: Jan T. Sott
 
 foreground      = #d9d8d8
-foreground_bold = #d9d8d8
-cursor          = #d9d8d8
+foreground_bold = #e7e7e8
+cursor          = #e7e7e8
 background      = #231f20
 
 # 16 color space
+
+# Black, Gray, Silver, White
 color0  = #231f20
-color1  = #ee2e24
-color2  = #00853e
-color3  = #ffd204
-color4  = #009ddc
-color5  = #98005d
-color6  = #85cebc
-color7  = #d9d8d8
 color8  = #737171
-color9  = #f386a1
-color10 = #1c3f95
-color11 = #5a5758
-color12 = #959ca1
-color13 = #e7e7e8
-color14 = #b06110
+color7  = #d9d8d8
 color15 = #ffffff
+
+# Red
+color1  = #ee2e24
+color9  = #ee2e24
+
+# Green
+color2  = #00853e
+color10 = #00853e
+
+# Yellow
+color3  = #ffd204
+color11 = #ffd204
+
+# Blue
+color4  = #009ddc
+color12 = #009ddc
+
+# Purple
+color5  = #98005d
+color13 = #98005d
+
+# Teal
+color6  = #85cebc
+color14 = #85cebc
+
+# Extra colors
+color15 = #ffffff
+color16 = #f386a1
+color17 = #b06110
+color18 = #1c3f95
+color19 = #5a5758
+color20 = #959ca1
+color21 = #e7e7e8
