--- a/themes/base16-macintosh.config
+++ b/themes/base16-macintosh.config
@@ -8,19 +8,42 @@ cursor          = #c0c0c0
 background      = #000000
 
 # 16 color space
+
+# Black, Gray, Silver, White
 color0  = #000000
-color1  = #dd0907
-color2  = #1fb714
-color3  = #fbf305
-color4  = #0000d3
-color5  = #4700a5
-color6  = #02abea
-color7  = #c0c0c0
 color8  = #808080
-color9  = #ff6403
-color10 = #404040
-color11 = #404040
-color12 = #808080
-color13 = #c0c0c0
-color14 = #90713a
+color7  = #c0c0c0
 color15 = #ffffff
+
+# Red
+color1  = #dd0907
+color9  = #dd0907
+
+# Green
+color2  = #1fb714
+color10 = #1fb714
+
+# Yellow
+color3  = #fbf305
+color11 = #fbf305
+
+# Blue
+color4  = #0000d3
+color12 = #0000d3
+
+# Purple
+color5  = #4700a5
+color13 = #4700a5
+
+# Teal
+color6  = #02abea
+color14 = #02abea
+
+# Extra colors
+color15 = #ffffff
+color16 = #ff6403
+color17 = #90713a
+color18 = #404040
+color19 = #404040
+color20 = #808080
+color21 = #c0c0c0
