--- a/themes/base16-marrakesh.config
+++ b/themes/base16-marrakesh.config
@@ -3,24 +3,47 @@
 # Author: Alexandre Gavioli (http://github.com/Alexx2/)
 
 foreground      = #948e48
-foreground_bold = #948e48
-cursor          = #948e48
+foreground_bold = #ccc37a
+cursor          = #ccc37a
 background      = #201602
 
 # 16 color space
+
+# Black, Gray, Silver, White
 color0  = #201602
-color1  = #c35359
-color2  = #18974e
-color3  = #a88339
-color4  = #477ca1
-color5  = #8868b3
-color6  = #75a738
-color7  = #948e48
 color8  = #6c6823
-color9  = #b36144
-color10 = #302e00
-color11 = #5f5b17
-color12 = #86813b
-color13 = #ccc37a
-color14 = #b3588e
+color7  = #948e48
 color15 = #faf0a5
+
+# Red
+color1  = #c35359
+color9  = #c35359
+
+# Green
+color2  = #18974e
+color10 = #18974e
+
+# Yellow
+color3  = #a88339
+color11 = #a88339
+
+# Blue
+color4  = #477ca1
+color12 = #477ca1
+
+# Purple
+color5  = #8868b3
+color13 = #8868b3
+
+# Teal
+color6  = #75a738
+color14 = #75a738
+
+# Extra colors
+color15 = #faf0a5
+color16 = #b36144
+color17 = #b3588e
+color18 = #302e00
+color19 = #5f5b17
+color20 = #86813b
+color21 = #ccc37a
