--- a/themes/base16-mexico-light.config
+++ b/themes/base16-mexico-light.config
@@ -3,24 +3,47 @@
 # Author: Sheldon Johnson
 
 foreground      = #383838
-foreground_bold = #383838
-cursor          = #383838
+foreground_bold = #282828
+cursor          = #282828
 background      = #f8f8f8
 
 # 16 color space
+
+# Black, Gray, Silver, White
 color0  = #f8f8f8
-color1  = #ab4642
-color2  = #538947
-color3  = #f79a0e
-color4  = #7cafc2
-color5  = #96609e
-color6  = #4b8093
-color7  = #383838
 color8  = #b8b8b8
-color9  = #dc9656
-color10 = #e8e8e8
-color11 = #d8d8d8
-color12 = #585858
-color13 = #282828
-color14 = #a16946
+color7  = #383838
 color15 = #181818
+
+# Red
+color1  = #ab4642
+color9  = #ab4642
+
+# Green
+color2  = #538947
+color10 = #538947
+
+# Yellow
+color3  = #f79a0e
+color11 = #f79a0e
+
+# Blue
+color4  = #7cafc2
+color12 = #7cafc2
+
+# Purple
+color5  = #96609e
+color13 = #96609e
+
+# Teal
+color6  = #4b8093
+color14 = #4b8093
+
+# Extra colors
+color15 = #181818
+color16 = #dc9656
+color17 = #a16946
+color18 = #e8e8e8
+color19 = #d8d8d8
+color20 = #585858
+color21 = #282828
