--- a/themes/base16-monokai.config
+++ b/themes/base16-monokai.config
@@ -3,24 +3,47 @@
 # Author: Wimer Hazenberg (http://www.monokai.nl)
 
 foreground      = #f8f8f2
-foreground_bold = #f8f8f2
-cursor          = #f8f8f2
+foreground_bold = #f5f4f1
+cursor          = #f5f4f1
 background      = #272822
 
 # 16 color space
+
+# Black, Gray, Silver, White
 color0  = #272822
-color1  = #f92672
-color2  = #a6e22e
-color3  = #f4bf75
-color4  = #66d9ef
-color5  = #ae81ff
-color6  = #a1efe4
-color7  = #f8f8f2
 color8  = #75715e
-color9  = #fd971f
-color10 = #383830
-color11 = #49483e
-color12 = #a59f85
-color13 = #f5f4f1
-color14 = #cc6633
+color7  = #f8f8f2
 color15 = #f9f8f5
+
+# Red
+color1  = #f92672
+color9  = #f92672
+
+# Green
+color2  = #a6e22e
+color10 = #a6e22e
+
+# Yellow
+color3  = #f4bf75
+color11 = #f4bf75
+
+# Blue
+color4  = #66d9ef
+color12 = #66d9ef
+
+# Purple
+color5  = #ae81ff
+color13 = #ae81ff
+
+# Teal
+color6  = #a1efe4
+color14 = #a1efe4
+
+# Extra colors
+color15 = #f9f8f5
+color16 = #fd971f
+color17 = #cc6633
+color18 = #383830
+color19 = #49483e
+color20 = #a59f85
+color21 = #f5f4f1
