--- a/themes/base16-oceanicnext.config
+++ b/themes/base16-oceanicnext.config
@@ -3,24 +3,47 @@
 # Author: https://github.com/voronianski/oceanic-next-color-scheme
 
 foreground      = #C0C5CE
-foreground_bold = #C0C5CE
-cursor          = #C0C5CE
+foreground_bold = #CDD3DE
+cursor          = #CDD3DE
 background      = #1B2B34
 
 # 16 color space
+
+# Black, Gray, Silver, White
 color0  = #1B2B34
-color1  = #EC5f67
-color2  = #99C794
-color3  = #FAC863
-color4  = #6699CC
-color5  = #C594C5
-color6  = #5FB3B3
-color7  = #C0C5CE
 color8  = #65737E
-color9  = #F99157
-color10 = #343D46
-color11 = #4F5B66
-color12 = #A7ADBA
-color13 = #CDD3DE
-color14 = #AB7967
+color7  = #C0C5CE
 color15 = #D8DEE9
+
+# Red
+color1  = #EC5f67
+color9  = #EC5f67
+
+# Green
+color2  = #99C794
+color10 = #99C794
+
+# Yellow
+color3  = #FAC863
+color11 = #FAC863
+
+# Blue
+color4  = #6699CC
+color12 = #6699CC
+
+# Purple
+color5  = #C594C5
+color13 = #C594C5
+
+# Teal
+color6  = #5FB3B3
+color14 = #5FB3B3
+
+# Extra colors
+color15 = #D8DEE9
+color16 = #F99157
+color17 = #AB7967
+color18 = #343D46
+color19 = #4F5B66
+color20 = #A7ADBA
+color21 = #CDD3DE
