--- a/themes/base16-paraiso.config
+++ b/themes/base16-paraiso.config
@@ -3,24 +3,47 @@
 # Author: Jan T. Sott
 
 foreground      = #a39e9b
-foreground_bold = #a39e9b
-cursor          = #a39e9b
+foreground_bold = #b9b6b0
+cursor          = #b9b6b0
 background      = #2f1e2e
 
 # 16 color space
+
+# Black, Gray, Silver, White
 color0  = #2f1e2e
-color1  = #ef6155
-color2  = #48b685
-color3  = #fec418
-color4  = #06b6ef
-color5  = #815ba4
-color6  = #5bc4bf
-color7  = #a39e9b
 color8  = #776e71
-color9  = #f99b15
-color10 = #41323f
-color11 = #4f424c
-color12 = #8d8687
-color13 = #b9b6b0
-color14 = #e96ba8
+color7  = #a39e9b
 color15 = #e7e9db
+
+# Red
+color1  = #ef6155
+color9  = #ef6155
+
+# Green
+color2  = #48b685
+color10 = #48b685
+
+# Yellow
+color3  = #fec418
+color11 = #fec418
+
+# Blue
+color4  = #06b6ef
+color12 = #06b6ef
+
+# Purple
+color5  = #815ba4
+color13 = #815ba4
+
+# Teal
+color6  = #5bc4bf
+color14 = #5bc4bf
+
+# Extra colors
+color15 = #e7e9db
+color16 = #f99b15
+color17 = #e96ba8
+color18 = #41323f
+color19 = #4f424c
+color20 = #8d8687
+color21 = #b9b6b0
