--- a/themes/base16-phd.config
+++ b/themes/base16-phd.config
@@ -3,24 +3,47 @@
 # Author: Hennig Hasemann (http://leetless.de/vim.html)
 
 foreground      = #b8bbc2
-foreground_bold = #b8bbc2
-cursor          = #b8bbc2
+foreground_bold = #dbdde0
+cursor          = #dbdde0
 background      = #061229
 
 # 16 color space
+
+# Black, Gray, Silver, White
 color0  = #061229
-color1  = #d07346
-color2  = #99bf52
-color3  = #fbd461
-color4  = #5299bf
-color5  = #9989cc
-color6  = #72b9bf
-color7  = #b8bbc2
 color8  = #717885
-color9  = #f0a000
-color10 = #2a3448
-color11 = #4d5666
-color12 = #9a99a3
-color13 = #dbdde0
-color14 = #b08060
+color7  = #b8bbc2
 color15 = #ffffff
+
+# Red
+color1  = #d07346
+color9  = #d07346
+
+# Green
+color2  = #99bf52
+color10 = #99bf52
+
+# Yellow
+color3  = #fbd461
+color11 = #fbd461
+
+# Blue
+color4  = #5299bf
+color12 = #5299bf
+
+# Purple
+color5  = #9989cc
+color13 = #9989cc
+
+# Teal
+color6  = #72b9bf
+color14 = #72b9bf
+
+# Extra colors
+color15 = #ffffff
+color16 = #f0a000
+color17 = #b08060
+color18 = #2a3448
+color19 = #4d5666
+color20 = #9a99a3
+color21 = #dbdde0
