--- a/themes/base16-pico.config
+++ b/themes/base16-pico.config
@@ -3,24 +3,47 @@
 # Author: PICO-8 (http://www.lexaloffle.com/pico-8.php)
 
 foreground      = #5f574f
-foreground_bold = #5f574f
-cursor          = #5f574f
+foreground_bold = #c2c3c7
+cursor          = #c2c3c7
 background      = #000000
 
 # 16 color space
+
+# Black, Gray, Silver, White
 color0  = #000000
-color1  = #ff004d
-color2  = #00e756
-color3  = #fff024
-color4  = #83769c
-color5  = #ff77a8
-color6  = #29adff
-color7  = #5f574f
 color8  = #008751
-color9  = #ffa300
-color10 = #1d2b53
-color11 = #7e2553
-color12 = #ab5236
-color13 = #c2c3c7
-color14 = #ffccaa
+color7  = #5f574f
 color15 = #fff1e8
+
+# Red
+color1  = #ff004d
+color9  = #ff004d
+
+# Green
+color2  = #00e756
+color10 = #00e756
+
+# Yellow
+color3  = #fff024
+color11 = #fff024
+
+# Blue
+color4  = #83769c
+color12 = #83769c
+
+# Purple
+color5  = #ff77a8
+color13 = #ff77a8
+
+# Teal
+color6  = #29adff
+color14 = #29adff
+
+# Extra colors
+color15 = #fff1e8
+color16 = #ffa300
+color17 = #ffccaa
+color18 = #1d2b53
+color19 = #7e2553
+color20 = #ab5236
+color21 = #c2c3c7
