--- a/themes/base16-pop.config
+++ b/themes/base16-pop.config
@@ -3,24 +3,47 @@
 # Author: Chris Kempson (http://chriskempson.com)
 
 foreground      = #d0d0d0
-foreground_bold = #d0d0d0
-cursor          = #d0d0d0
+foreground_bold = #e0e0e0
+cursor          = #e0e0e0
 background      = #000000
 
 # 16 color space
+
+# Black, Gray, Silver, White
 color0  = #000000
-color1  = #eb008a
-color2  = #37b349
-color3  = #f8ca12
-color4  = #0e5a94
-color5  = #b31e8d
-color6  = #00aabb
-color7  = #d0d0d0
 color8  = #505050
-color9  = #f29333
-color10 = #202020
-color11 = #303030
-color12 = #b0b0b0
-color13 = #e0e0e0
-color14 = #7a2d00
+color7  = #d0d0d0
 color15 = #ffffff
+
+# Red
+color1  = #eb008a
+color9  = #eb008a
+
+# Green
+color2  = #37b349
+color10 = #37b349
+
+# Yellow
+color3  = #f8ca12
+color11 = #f8ca12
+
+# Blue
+color4  = #0e5a94
+color12 = #0e5a94
+
+# Purple
+color5  = #b31e8d
+color13 = #b31e8d
+
+# Teal
+color6  = #00aabb
+color14 = #00aabb
+
+# Extra colors
+color15 = #ffffff
+color16 = #f29333
+color17 = #7a2d00
+color18 = #202020
+color19 = #303030
+color20 = #b0b0b0
+color21 = #e0e0e0
