--- a/themes/base16-seti-ui.config
+++ b/themes/base16-seti-ui.config
@@ -3,24 +3,47 @@
 # Author: 
 
 foreground      = #d6d6d6
-foreground_bold = #d6d6d6
-cursor          = #d6d6d6
+foreground_bold = #eeeeee
+cursor          = #eeeeee
 background      = #151718
 
 # 16 color space
+
+# Black, Gray, Silver, White
 color0  = #151718
-color1  = #Cd3f45
-color2  = #9fca56
-color3  = #e6cd69
-color4  = #55b5db
-color5  = #a074c4
-color6  = #55dbbe
-color7  = #d6d6d6
 color8  = #41535B
-color9  = #db7b55
-color10 = #8ec43d
-color11 = #3B758C
-color12 = #43a5d5
-color13 = #eeeeee
-color14 = #8a553f
+color7  = #d6d6d6
 color15 = #ffffff
+
+# Red
+color1  = #Cd3f45
+color9  = #Cd3f45
+
+# Green
+color2  = #9fca56
+color10 = #9fca56
+
+# Yellow
+color3  = #e6cd69
+color11 = #e6cd69
+
+# Blue
+color4  = #55b5db
+color12 = #55b5db
+
+# Purple
+color5  = #a074c4
+color13 = #a074c4
+
+# Teal
+color6  = #55dbbe
+color14 = #55dbbe
+
+# Extra colors
+color15 = #ffffff
+color16 = #db7b55
+color17 = #8a553f
+color18 = #8ec43d
+color19 = #3B758C
+color20 = #43a5d5
+color21 = #eeeeee
