--- a/themes/base16-solarized-dark.config
+++ b/themes/base16-solarized-dark.config
@@ -3,24 +3,47 @@
 # Author: Ethan Schoonover (http://ethanschoonover.com/solarized)
 
 foreground      = #93a1a1
-foreground_bold = #93a1a1
-cursor          = #93a1a1
+foreground_bold = #eee8d5
+cursor          = #eee8d5
 background      = #002b36
 
 # 16 color space
+
+# Black, Gray, Silver, White
 color0  = #002b36
-color1  = #dc322f
-color2  = #859900
-color3  = #b58900
-color4  = #268bd2
-color5  = #6c71c4
-color6  = #2aa198
-color7  = #93a1a1
 color8  = #657b83
-color9  = #cb4b16
-color10 = #073642
-color11 = #586e75
-color12 = #839496
-color13 = #eee8d5
-color14 = #d33682
+color7  = #93a1a1
 color15 = #fdf6e3
+
+# Red
+color1  = #dc322f
+color9  = #dc322f
+
+# Green
+color2  = #859900
+color10 = #859900
+
+# Yellow
+color3  = #b58900
+color11 = #b58900
+
+# Blue
+color4  = #268bd2
+color12 = #268bd2
+
+# Purple
+color5  = #6c71c4
+color13 = #6c71c4
+
+# Teal
+color6  = #2aa198
+color14 = #2aa198
+
+# Extra colors
+color15 = #fdf6e3
+color16 = #cb4b16
+color17 = #d33682
+color18 = #073642
+color19 = #586e75
+color20 = #839496
+color21 = #eee8d5
