--- a/themes/base16-summerfruit-dark.config
+++ b/themes/base16-summerfruit-dark.config
@@ -3,24 +3,47 @@
 # Author: Christopher Corley (http://christop.club/)
 
 foreground      = #D0D0D0
-foreground_bold = #D0D0D0
-cursor          = #D0D0D0
+foreground_bold = #E0E0E0
+cursor          = #E0E0E0
 background      = #151515
 
 # 16 color space
+
+# Black, Gray, Silver, White
 color0  = #151515
-color1  = #FF0086
-color2  = #00C918
-color3  = #ABA800
-color4  = #3777E6
-color5  = #AD00A1
-color6  = #1FAAAA
-color7  = #D0D0D0
 color8  = #505050
-color9  = #FD8900
-color10 = #202020
-color11 = #303030
-color12 = #B0B0B0
-color13 = #E0E0E0
-color14 = #CC6633
+color7  = #D0D0D0
 color15 = #FFFFFF
+
+# Red
+color1  = #FF0086
+color9  = #FF0086
+
+# Green
+color2  = #00C918
+color10 = #00C918
+
+# Yellow
+color3  = #ABA800
+color11 = #ABA800
+
+# Blue
+color4  = #3777E6
+color12 = #3777E6
+
+# Purple
+color5  = #AD00A1
+color13 = #AD00A1
+
+# Teal
+color6  = #1FAAAA
+color14 = #1FAAAA
+
+# Extra colors
+color15 = #FFFFFF
+color16 = #FD8900
+color17 = #CC6633
+color18 = #202020
+color19 = #303030
+color20 = #B0B0B0
+color21 = #E0E0E0
