--- a/themes/base16-summerfruit-light.config
+++ b/themes/base16-summerfruit-light.config
@@ -3,24 +3,47 @@
 # Author: Christopher Corley (http://christop.club/)
 
 foreground      = #101010
-foreground_bold = #101010
-cursor          = #101010
+foreground_bold = #151515
+cursor          = #151515
 background      = #FFFFFF
 
 # 16 color space
+
+# Black, Gray, Silver, White
 color0  = #FFFFFF
-color1  = #FF0086
-color2  = #00C918
-color3  = #ABA800
-color4  = #3777E6
-color5  = #AD00A1
-color6  = #1FAAAA
-color7  = #101010
 color8  = #B0B0B0
-color9  = #FD8900
-color10 = #E0E0E0
-color11 = #D0D0D0
-color12 = #000000
-color13 = #151515
-color14 = #CC6633
+color7  = #101010
 color15 = #202020
+
+# Red
+color1  = #FF0086
+color9  = #FF0086
+
+# Green
+color2  = #00C918
+color10 = #00C918
+
+# Yellow
+color3  = #ABA800
+color11 = #ABA800
+
+# Blue
+color4  = #3777E6
+color12 = #3777E6
+
+# Purple
+color5  = #AD00A1
+color13 = #AD00A1
+
+# Teal
+color6  = #1FAAAA
+color14 = #1FAAAA
+
+# Extra colors
+color15 = #202020
+color16 = #FD8900
+color17 = #CC6633
+color18 = #E0E0E0
+color19 = #D0D0D0
+color20 = #000000
+color21 = #151515
