--- a/themes/base16-twilight.config
+++ b/themes/base16-twilight.config
@@ -3,24 +3,47 @@
 # Author: David Hart (https://github.com/hartbit)
 
 foreground      = #a7a7a7
-foreground_bold = #a7a7a7
-cursor          = #a7a7a7
+foreground_bold = #c3c3c3
+cursor          = #c3c3c3
 background      = #1e1e1e
 
 # 16 color space
+
+# Black, Gray, Silver, White
 color0  = #1e1e1e
-color1  = #cf6a4c
-color2  = #8f9d6a
-color3  = #f9ee98
-color4  = #7587a6
-color5  = #9b859d
-color6  = #afc4db
-color7  = #a7a7a7
 color8  = #5f5a60
-color9  = #cda869
-color10 = #323537
-color11 = #464b50
-color12 = #838184
-color13 = #c3c3c3
-color14 = #9b703f
+color7  = #a7a7a7
 color15 = #ffffff
+
+# Red
+color1  = #cf6a4c
+color9  = #cf6a4c
+
+# Green
+color2  = #8f9d6a
+color10 = #8f9d6a
+
+# Yellow
+color3  = #f9ee98
+color11 = #f9ee98
+
+# Blue
+color4  = #7587a6
+color12 = #7587a6
+
+# Purple
+color5  = #9b859d
+color13 = #9b859d
+
+# Teal
+color6  = #afc4db
+color14 = #afc4db
+
+# Extra colors
+color15 = #ffffff
+color16 = #cda869
+color17 = #9b703f
+color18 = #323537
+color19 = #464b50
+color20 = #838184
+color21 = #c3c3c3
