--- a/themes/base16-unikitty-dark.config
+++ b/themes/base16-unikitty-dark.config
@@ -3,24 +3,47 @@
 # Author: Josh W Lewis (@joshwlewis)
 
 foreground      = #bcbabe
-foreground_bold = #bcbabe
-cursor          = #bcbabe
+foreground_bold = #d8d7da
+cursor          = #d8d7da
 background      = #2e2a31
 
 # 16 color space
+
+# Black, Gray, Silver, White
 color0  = #2e2a31
-color1  = #d8137f
-color2  = #17ad98
-color3  = #dc8a0e
-color4  = #796af5
-color5  = #bb60ea
-color6  = #149bda
-color7  = #bcbabe
 color8  = #838085
-color9  = #d65407
-color10 = #4a464d
-color11 = #666369
-color12 = #9f9da2
-color13 = #d8d7da
-color14 = #c720ca
+color7  = #bcbabe
 color15 = #f5f4f7
+
+# Red
+color1  = #d8137f
+color9  = #d8137f
+
+# Green
+color2  = #17ad98
+color10 = #17ad98
+
+# Yellow
+color3  = #dc8a0e
+color11 = #dc8a0e
+
+# Blue
+color4  = #796af5
+color12 = #796af5
+
+# Purple
+color5  = #bb60ea
+color13 = #bb60ea
+
+# Teal
+color6  = #149bda
+color14 = #149bda
+
+# Extra colors
+color15 = #f5f4f7
+color16 = #d65407
+color17 = #c720ca
+color18 = #4a464d
+color19 = #666369
+color20 = #9f9da2
+color21 = #d8d7da
