--- a/themes/base16-unikitty-light.config
+++ b/themes/base16-unikitty-light.config
@@ -3,24 +3,47 @@
 # Author: Josh W Lewis (@joshwlewis)
 
 foreground      = #6c696e
-foreground_bold = #6c696e
-cursor          = #6c696e
+foreground_bold = #4f4b51
+cursor          = #4f4b51
 background      = #ffffff
 
 # 16 color space
+
+# Black, Gray, Silver, White
 color0  = #ffffff
-color1  = #d8137f
-color2  = #17ad98
-color3  = #dc8a0e
-color4  = #775dff
-color5  = #aa17e6
-color6  = #149bda
-color7  = #6c696e
 color8  = #a7a5a8
-color9  = #d65407
-color10 = #e1e1e2
-color11 = #c4c3c5
-color12 = #89878b
-color13 = #4f4b51
-color14 = #e013d0
+color7  = #6c696e
 color15 = #322d34
+
+# Red
+color1  = #d8137f
+color9  = #d8137f
+
+# Green
+color2  = #17ad98
+color10 = #17ad98
+
+# Yellow
+color3  = #dc8a0e
+color11 = #dc8a0e
+
+# Blue
+color4  = #775dff
+color12 = #775dff
+
+# Purple
+color5  = #aa17e6
+color13 = #aa17e6
+
+# Teal
+color6  = #149bda
+color14 = #149bda
+
+# Extra colors
+color15 = #322d34
+color16 = #d65407
+color17 = #e013d0
+color18 = #e1e1e2
+color19 = #c4c3c5
+color20 = #89878b
+color21 = #4f4b51
